--- a/_config.yml
+++ b/_config.yml
@@ -8,27 +8,27 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Bingding Huang / Medical AI Lab"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Bingding Huang"
+description              : &description "Medical AI Lab"
+url                      : https://bingding.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "bingding/bingding.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "bingding.jpeg"
+  name             : "Bingding Huang"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Pingshan, Shenzhen, China"
+  employer         : "Shenzhen Technology University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "huangbingding@sztu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
